[project]
name = "weather-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "geocoder>=1.38.1",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
